--- a/src/libs/i18n/locales/vi.json
+++ b/src/libs/i18n/locales/vi.json
@@ -1,7 +1,7 @@
 {
   "message": {
-    "title": "Card Title",
-    "text": "Cake sesame snaps cupcake gingerbread danish I love gingerbread. Apple pie pie jujubes chupa chups muffin halvah lollipop. Chocolate cake oat cake tiramisu marzipan sugar plum. Donut sweet pie oat cake dragée fruitcake cotton candy lemon drops.",
+    "title": "Xin chào",
+    "text": "Xin chào Cake sesame snaps cupcake gingerbread danish I love gingerbread. Apple pie pie jujubes chupa chups muffin halvah lollipop. Chocolate cake oat cake tiramisu marzipan sugar plum. Donut sweet pie oat cake dragée fruitcake cotton candy lemon drops.",
     "pagelength": "Showing 1 to",
     "of": "of",
     "pageText2": "entries",
