--- a/src/libs/i18n/locales/vi.json
+++ b/src/libs/i18n/locales/vi.json
@@ -9,6 +9,8 @@
   "Chat": "Trò chuyện",
   "Todo": "Todo",
   "Access Control": "Quyền điều khiển",
-  "eCommerce": "eCommerce22"
-
+  "eCommerce": "eCommerce22",
+  "Chatbot": "ChatBot",
+  "Sales": "Bán hàng",
+  "Charts & Exports": "Biểu đồ & Báo cáo"
 }
