--- a/src/libs/i18n/locales/vi.json
+++ b/src/libs/i18n/locales/vi.json
@@ -1,7 +1,6 @@
 {
   "Charts & Maps": "BIỂU ĐỒ & BÁO CÁO",
   "Others": "Khác",
-
   "Calendar": "Lịch",
   "Dashboards": "Bảng điều khiển",
   "Analytics": "Phân tích",
@@ -15,10 +14,10 @@
   "Sales": "Bán hàng",
   "Charts & Exports": "Biểu đồ & Báo cáo",
   "Users": "Người Dùng",
+  "Table Users": "Bảng Người Dùng",
   "Customers": "Khách Hàng",
   "Transactions": "Giao Dịch",
   "Data Chart": "Biểu đồ dữ liệu",
-  "Data Export": "Truy xuất Dữ liệu",
   "Forms & Tables": "Bảng & Biểu mẫu",
   "Permission Control": "Quản lý quyền"
 }
