--- a/src/libs/i18n/locales/vi.json
+++ b/src/libs/i18n/locales/vi.json
@@ -12,7 +12,7 @@
   "eCommerce": "Thương mại",
   "Chatbot": "ChatBot",
   "Sales": "Bán hàng",
-  "Charts & Exports": "Biểu đồ & Báo cáo",
+  "Charts Data": "Biểu đồ & Báo cáo",
   "Users": "Người Dùng",
   "Table Users": "Bảng Người Dùng",
   "Customers": "Khách Hàng",
