--- a/src/libs/i18n/locales/vi.json
+++ b/src/libs/i18n/locales/vi.json
@@ -12,12 +12,15 @@
   "eCommerce": "Thương mại",
   "Chatbot": "ChatBot",
   "Sales": "Bán hàng",
-  "Charts Data": "Biểu đồ & Báo cáo",
+  "Charts Data": "Dữ liệu biểu đồ",
   "Users": "Người Dùng",
   "Table Users": "Bảng Người Dùng",
   "Customers": "Khách Hàng",
   "Transactions": "Giao Dịch",
   "Data Chart": "Biểu đồ dữ liệu",
   "Forms & Tables": "Bảng & Biểu mẫu",
-  "Permission Control": "Quản lý quyền"
+  "Permission Control": "Quản lý quyền",
+  "Charts Users": "Biểu đồ người dùng",
+  "Charts Customers": "Biểu đồ khách hàng",
+  "Charts Transaction": "Biểu đồ giao dịch"
 }
