--- a/src/libs/i18n/locales/en.json
+++ b/src/libs/i18n/locales/en.json
@@ -173,5 +173,6 @@
   "Layout Boxed": "Layout Boxed",
   "Without Menu": "Without Menu",
   "Layout Empty": "Layout Empty",
-  "Layout Blank": "Layout Blank"
+  "Layout Blank": "Layout Blank",
+  "Table Customers": "Table Customers"
 }
